added link to video

--- a/Views/Index.html
+++ b/Views/Index.html
@@ -24,7 +24,7 @@
             <h1>David Westerlund</h1>
             <nav>
                 <ul>
-                    <li><a>Videos</a></li>
+                    <li><a href="https://www.youtube.com/user/thorwest/videos">Videos</a></li>
                     <li><a href="#/Book">Contact</a></li>
                 </ul>
             </nav>
