new design update

--- a/Views/Index.html
+++ b/Views/Index.html
@@ -9,7 +9,7 @@
         </section>
 
           <section class="col-md-6 center_img">
-            <img src="../Images/bg2.png" width="100%" height="auto" />
+            <img src="../Images/bg1.png" width="100%" height="auto" />
         </section>
 
         <section class="upper_right col-md-3">
@@ -24,8 +24,7 @@
             <h1>David Westerlund</h1>
             <nav>
                 <ul>
-                    <li><a href="https://www.facebook.com/pages/David-Westerlund/131148210290494">Facebook</a></li>
-                    <li><a href="https://www.youtube.com/user/thorwest/videos">Videos</a></li>
+                    <li><a>Videos</a></li>
                     <li><a href="#/Book">Contact</a></li>
                 </ul>
             </nav>
