--- a/Style/site.css
+++ b/Style/site.css
@@ -1,4 +1,20 @@
+@font-face {
+    font-family: 'ar_destineregular';
+    src: url('ardestine-webfont.eot');
+    src: url('ardestine-webfont.eot?#iefix') format('embedded-opentype'),
+         url('ardestine-webfont.woff2') format('woff2'),
+         url('ardestine-webfont.woff') format('woff'),
+         url('ardestine-webfont.ttf') format('truetype'),
+         url('ardestine-webfont.svg#ar_destineregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 body {
+    background: #070707;
+    text-align: center;
 }
 
 header {
@@ -32,12 +48,12 @@ nav {
 }
 
 .index_view .bottom_left {
-    margin-top: -90px;
+    margin-top: -75px;
     float: left;
 }
 
 .index_view .bottom_right {
-    margin-top: -90px;
+    margin-top: -75px;
     text-align: right;
     float: right;
 }
@@ -86,6 +102,22 @@ a:hover{
     .index_view .bottom_right{
         float: left;    
         text-align: left;
-        margin-top: 35px;
+        margin-top: 20px;
     }
+}
+
+
+h1 {
+    font-family: 'ar_destineregular';
+    color: #fff;
+    font-size: 44px;
+    font-weight: normal;
+    text-align: center;
+    margin-top: 40px;
+}
+
+.col-md-6 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    
 }
